# maze-game-engine

./: Interactive Maze.py  Main.py  Markers.py  Maze.py  README.md  Settings.py  pyproject.toml
MazeObjects/: User.py
Utilities/: Environment.py
src/maze_game_engine/: Markers.py  Maze.py  __init__.py
src/maze_game_engine/MazeObjects/: Agent.py  PointOfInterest.py  User.py
tests/: Sample.py
