[build-system]
requires = [
    "setuptools >= 61.0",
    "enum",
    "math",
	"numpy",
    "twine >= 1.11.0",
    "typing",
    "wheel >= 0.31.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "maze-game-engine"
version = "0.1a"
authors = [
    {name="Nel. S.", email="75831544+Nel-S@users.noreply.github.com"},
]
description = "A basic engine for basic maze games."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Nel-S/Maze"
Issues = "https://github.com/Nel-S/Maze/issues"